@@ -237,6 +237,7 @@ ELinks 0.11.5.GIT now:
 
 To be released as 0.11.6.
 
+* critical: fix double-free crash if EOF immediately follows </MAP>
 * critical bug 1053: fix crash if a download finishes after ELinks has
   closed the terminal from which the download was started
 * major bug 1004: ignore locales when comparing HTML element names and
